# tidal-mcp

./: .gitignore  CLAUDE.md  README.md  TROUBLESHOOTING.md  pyproject.toml  run_server.sh  test_mcp_tools.py  test_protocol.py
llms/: fastmcp-llms-full.txt
src/tidal_mcp/: __init__.py  models.py  server.py
